--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/sequelize": "^8.0.0",
     "class-validator": "^0.13.2",
+    "mysql2": "^2.3.3",
     "nestjs-dotenv": "^1.2.1",
     "nestjs-sequelize-seeder": "^1.1.4",
     "pg": "^8.7.3",
